samples/_failures_safe/1761414187_08bf64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14ecb438.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
